--- a/renovate.json
+++ b/renovate.json
@@ -7,5 +7,11 @@
     "fileMatch": ["\\.yaml$"],
     "enabled": true,
     "automerge": true
+  },
+  "lockFileMaintenance": {
+    "enabled": true,
+    "automerge": true,
+    "automergeType": "pr",
+    "platformAutomerge": false
   }
 }
